# greenlint

./: .gitignore  .greenlint.json  README.md  azure-pipelines.yml  dashboard.py  greenlint-docker-check.js  greenlint-js-scan.js  greenlint-merge.js  greenlint_js.json  greenlint_report.json  pyproject.toml
.github/workflows/: greenlint.yml
examples/: bad_patterns.py
greenlint/: cli.py  report.py  rules.py  scanner.py
tests/: test_rules.py
tools/eslint-plugin-greenlint/: index.js
