
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greenlint"
version = "0.2.0"
description = "Prototype linter for sustainable, energy-efficient coding."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["asttokens>=2.4.1"]

[project.scripts]
greenlint = "greenlint.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["greenlint*"]
